--- a/settings.json
+++ b/settings.json
@@ -2,7 +2,7 @@
     "julia.enableTelemetry": true,
     "julia.execution.resultType": "inline",
     "keyboard.dispatch": "keyCode",
-    "workbench.colorTheme": "Material Theme Darker High Contrast",
+    "workbench.colorTheme": "Community Material Theme Darker High Contrast",
     "git.confirmSync": false,
     "git.autofetch": true,
     "diffEditor.renderSideBySide": false,
@@ -22,5 +22,10 @@
     "latex-workshop.view.pdf.viewer": "tab",
     "diffEditor.ignoreTrimWhitespace": false,
     "terminal.integrated.inheritEnv": false,
-    "python.terminal.executeInFileDir": true
+    "python.terminal.executeInFileDir": true,
+    "workbench.iconTheme": "material-icon-theme",
+    "explorer.confirmDragAndDrop": false,
+    "terminal.integrated.commandsToSkipShell": [
+        "language-julia.interrupt"
+    ],
 }
